--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project\\\\research'"
+       "'/Users/ramanmehta/Desktop/untitled folder/Text-Summarization-NLP-Project-main/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project'"
+       "'/Users/ramanmehta/Desktop/untitled folder/Text-Summarization-NLP-Project-main'"
       ]
      },
      "execution_count": 4,
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textSummarizer.constants import *\n",
-    "from textSummarizer.utils.common import read_yaml, create_directories"
+    "from src.textSummarizer.constants import *\n",
+    "from src.textSummarizer.utils.common import read_yaml, create_directories"
    ]
   },
   {
@@ -164,31 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2023-05-18 08:51:29,881: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-05-18 08:51:29,892: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-05-18 08:51:29,893: INFO: common: created directory at: artifacts]\n",
-      "[2023-05-18 08:51:29,894: INFO: common: created directory at: artifacts/data_transformation]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]d:\\Softwares\\anaconda3\\envs\\textS\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3606: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "                                                                                                 \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "try:\n",
     "    config = ConfigurationManager()\n",
     "    data_transformation_config = config.get_data_transformation_config()\n",
     "    data_transformation = DataTransformation(config=data_transformation_config)\n",
@@ -207,7 +186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "textS",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
