--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project\\\\research'"
+       "'/Users/ramanmehta/Desktop/untitled folder/Text-Summarization-NLP-Project-main/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project'"
+       "'/Users/ramanmehta/Desktop/untitled folder/Text-Summarization-NLP-Project-main'"
       ]
      },
      "execution_count": 4,
@@ -212,107 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2023-05-18 12:54:11,649: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-05-18 12:54:11,652: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-05-18 12:54:11,654: INFO: common: created directory at: artifacts]\n",
-      "[2023-05-18 12:54:11,655: INFO: common: created directory at: artifacts/model_trainer]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Softwares\\anaconda3\\envs\\textS\\lib\\site-packages\\transformers\\optimization.py:407: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n",
-      "  0%|          | 0/51 [00:00<?, ?it/s]You're using a PegasusTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      " 20%|█▉        | 10/51 [07:49<30:32, 44.70s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.3137, 'learning_rate': 1.0000000000000002e-06, 'epoch': 0.2}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 39%|███▉      | 20/51 [14:44<21:16, 41.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.1, 'learning_rate': 2.0000000000000003e-06, 'epoch': 0.39}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 59%|█████▉    | 30/51 [22:08<15:10, 43.37s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.0839, 'learning_rate': 3e-06, 'epoch': 0.59}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 78%|███████▊  | 40/51 [29:04<07:32, 41.17s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 2.9821, 'learning_rate': 4.000000000000001e-06, 'epoch': 0.78}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 98%|█████████▊| 50/51 [35:40<00:34, 34.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 3.1034, 'learning_rate': 5e-06, 'epoch': 0.98}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 51/51 [36:24<00:00, 42.84s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'train_runtime': 2184.9179, 'train_samples_per_second': 0.375, 'train_steps_per_second': 0.023, 'train_loss': 3.11656564357234, 'epoch': 1.0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
@@ -322,18 +224,11 @@
     "except Exception as e:\n",
     "    raise e"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "textS",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
