--- a/research/05_Model_evaluation.ipynb
+++ b/research/05_Model_evaluation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project\\\\research'"
+       "'/Users/ramanmehta/Desktop/untitled folder/Text-Summarization-NLP-Project-main/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project'"
+       "'/Users/ramanmehta/Desktop/untitled folder/Text-Summarization-NLP-Project-main'"
       ]
      },
      "execution_count": 4,
@@ -217,43 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2023-05-18 20:14:03,142: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-05-18 20:14:03,151: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-05-18 20:14:03,153: INFO: common: created directory at: artifacts]\n",
-      "[2023-05-18 20:14:03,155: INFO: common: created directory at: artifacts/model_evaluation]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\bokti\\AppData\\Local\\Temp\\ipykernel_25280\\2973449339.py:59: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
-      "  rouge_metric = load_metric('rouge')\n",
-      "100%|██████████| 5/5 [03:54<00:00, 46.91s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2023-05-18 20:18:18,394: INFO: rouge_scorer: Using default tokenizer.]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
@@ -263,18 +229,11 @@
     "except Exception as e:\n",
     "    raise e"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "textS",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
